--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -23,7 +23,7 @@
           <h2>登录</h2>
           <input type="text" name="" id="name" placeholder="用户名" />
           <input type="password" name="" id="password" placeholder="密码" />
-          <input type="submit" name="" value="登录" onclick="login()"/>
+          <input type="submit" name="" value="登录" onclick="login();"/>
           <p class="signup"><a href="adminlogin.html" onclick="topggleForm();">管理员登录</a></p>
           <p class="signup">没有账号？<a href="#" onclick="topggleForm();">注册</a></p>
         </form>
