登录注册（有vue版）

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
                 <el-dropdown-item>删除</el-dropdown-item>
             </el-dropdown-menu>
         </el-dropdown>
-        <span>USER</span>
+        <span>111</span>
         <el-avatar icon="el-icon-user-solid" shape="square" :size="45"></el-avatar>
     </el-header>
     <el-main>
