--- a/src/main/resources/static/indextext.html
+++ b/src/main/resources/static/indextext.html
@@ -18,13 +18,13 @@
         <el-dropdown>
             <i class="el-icon-more-outline" style="margin-right: 15px"></i>
             <el-dropdown-menu slot="dropdown">
-                <el-dropdown-item><i class="el-icon-user-solid"></i><a href="adminlogin.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">个人中心</a></el-dropdown-item>
-                <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="adminlogin.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的购物车</a></el-dropdown-item>
-                <el-dropdown-item><i class="el-icon-shopping-bag-2"></i><a href="adminlogin.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的订单</a></el-dropdown-item>
+                <el-dropdown-item><i class="el-icon-user-solid"></i><a href="userself.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">个人中心</a></el-dropdown-item>
+                <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="shoppingcart.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的购物车</a></el-dropdown-item>
+                <el-dropdown-item><i class="el-icon-shopping-bag-2"></i><a href="myorder.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的订单</a></el-dropdown-item>
                 <el-dropdown-item><i class="el-icon-switch-button"></i><a href="login.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">退出登录</a></el-dropdown-item>
             </el-dropdown-menu>
         </el-dropdown>
-        <span>USER</span>
+        <span>金芒火炙蟹棒卷</span>
         <el-avatar icon="el-icon-user-solid" shape="square" :size="45"></el-avatar>
     </el-header>
     <el-main>
