--- a/src/main/resources/static/userself.html
+++ b/src/main/resources/static/userself.html
@@ -21,7 +21,7 @@
                 <el-dropdown-item><i class="el-icon-user-solid"></i><a href="userself.html" onclick="topggleForm();"
                                                                        style="text-decoration: none;color:#808080">个人中心</a>
                 </el-dropdown-item>
-                <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="shoppingcart.html"
+                <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="hoppingcart.htmls"
                                                                             onclick="topggleForm();"
                                                                             style="text-decoration: none;color:#808080">我的购物车</a>
                 </el-dropdown-item>
