--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -462,7 +462,7 @@
             ];
             var oBox = document.getElementById("box");
             var oCar = document.getElementById("car");
-            var oUl = document.getElementsByTagName("ul")[0];
+            // var oUl = document.getElementsByTagName("ul")[0];
 
             for (var i = 0; i < aData.length; i++) {
                 var oLi = document.createElement("li");
@@ -635,9 +635,8 @@
 <script src="//unpkg.com/vue@2/dist/vue.js"></script>
 <script src="//unpkg.com/element-ui@2.15.14/lib/index.js"></script>
 <div id="app">
-    <el-header style="font-size: 12px">
-        <el-row type="flex" justify="space-around" style="align-items: center; text-align: right">
-            <el-col :span="16"></el-col>
+    <el-header style="font-size: 12px; justify-content: flex-end">
+        <el-row type="flex" style="justify-content: flex-end; align-items: center">
             <el-col :span="2">
                 <el-dropdown>
                     <i class="el-icon-more-outline" style="margin-right: 15px"></i>
@@ -733,7 +732,6 @@
 
 <style>
     @import url("//unpkg.com/element-ui@2.15.14/lib/theme-chalk/index.css");
-    static/img/blackbackground.jpg
 
     .el-header {
         background-color: #B3C0D1;
