--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -24,7 +24,7 @@
                     <input v-model="user.name" type="text" name="" id="name" placeholder="用户名"/>
                     <input v-model="user.password" type="password" name="" id="password" placeholder="密码"/>
                     <input type="button" name="" value="登录" @click="login"/>
-                    <p class="signup"><a href="adminlogin.html" onclick="topggleForm();">管理员登录</a></p>
+                    <p class="signup"><a href="admin/adminlogin.html" onclick="topggleForm();">管理员登录</a></p>
                     <p class="signup">没有账号？<a href="#" onclick="topggleForm();">注册</a></p>
                 </form>
             </div>
