--- a/src/main/resources/static/userself.html
+++ b/src/main/resources/static/userself.html
@@ -22,8 +22,8 @@
                     <i class="el-icon-more-outline" style="margin-right: 15px"></i>
                     <el-dropdown-menu v-slot="dropdown">
                         <el-dropdown-item><i class="el-icon-user-solid"></i><a href="userself.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">个人中心</a></el-dropdown-item>
-                        <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="shoppingcart.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的购物车</a></el-dropdown-item>
-                        <el-dropdown-item><i class="el-icon-shopping-bag-2"></i><a href="myorder.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的订单</a></el-dropdown-item>
+                        <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="vuehtml/shoppingcart.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的购物车</a></el-dropdown-item>
+                        <el-dropdown-item><i class="el-icon-shopping-bag-2"></i><a href="vuehtml/myorder.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的订单</a></el-dropdown-item>
                         <el-dropdown-item><i class="el-icon-switch-button"></i><a href="login.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">退出登录</a></el-dropdown-item>
                     </el-dropdown-menu>
                 </el-dropdown>
@@ -35,7 +35,7 @@
     </el-header>
     <el-main>
         <el-breadcrumb separator-class="el-icon-arrow-right">
-            <el-breadcrumb-item :to="{ path: '/' }"><a href="index.html" style="text-decoration: none;">首页</a></el-breadcrumb-item>
+            <el-breadcrumb-item :to="{ path: '/' }"><a href="vuehtml/oldindex.html" style="text-decoration: none;">首页</a></el-breadcrumb-item>
             <el-breadcrumb-item><i class="el-icon-user-solid"></i>个人中心</el-breadcrumb-item>
         </el-breadcrumb>
         <el-container>
@@ -129,8 +129,8 @@
         background-color: #99a9bf;
     }
     .el-header {
-        background-color: #B3C0D1;
-        color: #333;
+        background-color: #8c222c;
+        color: #B3C0D1;
         line-height: 60px;
     }
 
