--- a/src/main/resources/static/kehu.html
+++ b/src/main/resources/static/kehu.html
@@ -22,7 +22,7 @@
 
     <div class="lg">
         <div class="to">
-            <div class="logo"><img src="images/logo.jpg" /></div>
+            <div class="logo"><img src="images/logo.jpg" />
 
             </div>
         </div>
@@ -34,7 +34,7 @@
             <li><a href="index.html">返回首页</a></li>
             <li><a href="xitong.html">图书信息</a></li>
             <li><a href="kehu.html">客户信息</a></li>
-            <li><a href="../数据库课程设计/OnlineBookstoreManagementSystem/src/main/resources/static/dingdan.html">订单信息</a></li>
+            <li><a href="dingdan.html">订单信息</a></li>
         </ul>
     </div>
 
@@ -48,13 +48,9 @@
 <br>
 
 <body>
-  <table border="2" align="center" cellpadding="20px" cellspacing="1" style="width:600px; height:160px; " >
+  <table border="2" align="center" cellpadding="20px" cellspacing="1" style="width:1000px; height:300px; " >
 <thead>
-
-
-
     <tr>
-
       <th height="50px" width ="80px" align="center">订单编号</th>
       <th height="50px" width ="80px" align="center">昵称</th>
       <th height="50px" width ="80px" align="center">姓名</th>
@@ -95,7 +91,7 @@
    <th height="50px" width ="80px" align="center">伊万·伊利奇之死 *1</td>
    <th height="50px" width ="80px" align="center">39.8</td>
    <td>
-<p style=" height:30px width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF"><a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
+<p style=" height:30px; width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF"><a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
   </td>
    </tr>
   </table>
