--- a/src/main/resources/static/pay.html
+++ b/src/main/resources/static/pay.html
@@ -32,15 +32,15 @@
         <div class="clearit"></div>
     </div>
 
-    <div class="dao">
-        <ul>
-            <li><a href="index.html">首页</a></li>
-            <li><a href="shudain.html">书店区</a></li>
-            <li><a href="shutan.html">书摊区</a></li>
-            <li><a href="xinshu.html">新书</a></li>
-            <li><a href="zixun.html">资讯</a></li>
-        </ul>
-    </div>
+<!--    <div class="dao">-->
+<!--        <ul>-->
+<!--            <li><a href="index.html">首页</a></li>-->
+<!--            <li><a href="shudain.html">书店区</a></li>-->
+<!--            <li><a href="shutan.html">书摊区</a></li>-->
+<!--            <li><a href="xinshu.html">新书</a></li>-->
+<!--            <li><a href="zixun.html">资讯</a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
     
     <h3 class="common_title">确认收货地址</h3>
 
