--- a/src/main/resources/static/xitong.html
+++ b/src/main/resources/static/xitong.html
@@ -34,7 +34,7 @@
             <li><a href="index.html">返回首页</a></li>
             <li><a href="xitong.html">图书信息</a></li>
             <li><a href="kehu.html">客户信息</a></li>
-            <li><a href="../数据库课程设计/OnlineBookstoreManagementSystem/src/main/resources/static/dingdan.html">订单信息</a></li>
+            <li><a href="dingdan.html">订单信息</a></li>
         </ul>
     </div>
 
