--- a/src/main/resources/static/vuehtml/myorder.html
+++ b/src/main/resources/static/vuehtml/myorder.html
@@ -146,7 +146,7 @@
     margin-left: 1200px;
   }
   body{
-    background:url("../img/blackbackground.jpg");
+    /*background:url("../img/blackbackground.jpg");*/
     background-size:cover;
   }
   .order span{
