--- a/src/main/resources/static/kehu.html
+++ b/src/main/resources/static/kehu.html
@@ -1,116 +1,143 @@
 <!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/css.css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/css.css"/>
     <title>听雨书屋</title>
     <link rel="shortcut icon" href="img/mihuyo.ico">
 </head>
 
 <body>
-    <div class="top">
-        <div class="to">
-            <p>网罗天下图书 传承中华文明</p>
-            <ul>
-
-            </ul>
-        </div>
-        <div class="clearit"></div>
-    </div>
-
-    <div class="lg">
-        <div class="to">
-            <div class="logo"><img src="images/logo.jpg" />
-
-            </div>
-        </div>
-        <div class="clearit"></div>
-    </div>
-
-    <div class="dao">
+<div class="top">
+    <div class="to">
+        <p>网罗天下图书 传承中华文明</p>
         <ul>
-            <li><a href="index.html">返回首页</a></li>
-            <li><a href="xitong.html">图书信息</a></li>
-            <li><a href="kehu.html">客户信息</a></li>
-            <li><a href="dingdan.html">订单信息</a></li>
+
         </ul>
     </div>
+    <div class="clearit"></div>
+</div>
 
+<div class="lg">
+    <div class="to">
+        <div class="logo"><img src="images/logo.jpg"/>
 
-    <div class="nav">
-        <div class="da">
-
-            <div class="ban"><img src="images/ban.jpg" width="1000" height="327" /></div>
-            <div class="hao">
-                <h2>管理客户信息</h2>
-<br>
-
-<body>
-  <table border="2" align="center" cellpadding="20px" cellspacing="1" style="width:1000px; height:300px; " >
-<thead>
-    <tr>
-      <th height="50px" width ="80px" align="center">订单编号</th>
-      <th height="50px" width ="80px" align="center">昵称</th>
-      <th height="50px" width ="80px" align="center">姓名</th>
-      <th height="50px" width ="80px" align="center">地址</th>
-      <th height="50px" width ="80px" align="center">订单</th>
-      <th height="50px" width ="80px" align="center">实付</th>
-      <th height="50px" width ="80px" align="center">修改</th>
-    </tr>
-  </thead>
-   <tr>
-   <th height="50px" width ="80px" align="center">230-540291  </td>
-   <th height="50px" width ="80px" align="center">阿离</td>
-   <th height="50px" width ="80px" align="center">薛悦雅</td>
-   <th height="50px" width ="80px" align="center">河北省</td>
-   <th height="50px" width ="80px" align="center">孤独社会 *1</td>
-   <th height="50px" width ="80px" align="center">59.80</td>
-   <td>
-<p style=" height:30px width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF"><a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
- </td>
-  </tr>
-   <tr>
-   <th height="50px" width ="80px" align="center">230-540292  </td>
-   <th height="50px" width ="80px" align="center">YoFu蓝胖子</td>
-   <th height="50px" width ="80px" align="center">李知清</td>
-   <th height="50px" width ="80px" align="center">北京市</td>
-   <th height="50px" width ="80px" align="center">汉代的谣言 *1;两种孤独 *1 </td>
-   <th height="50px" width ="80px" align="center">145.00</td>
-   </td>
-   <td>
-<p style=" height:30px width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF"><a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
-  </td>
-  </tr>
-   <tr>
-   <th height="50px" width ="80px" align="center">230-540293  </td>
-   <th height="50px" width ="80px" align="center">爱吃行天下</td>
-   <th height="50px" width ="80px" align="center">王天真</td>
-   <th height="50px" width ="80px" align="center">上海市</td>
-   <th height="50px" width ="80px" align="center">伊万·伊利奇之死 *1</td>
-   <th height="50px" width ="80px" align="center">39.8</td>
-   <td>
-<p style=" height:30px; width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF"><a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
-  </td>
-   </tr>
-  </table>
-            
         </div>
-<br>
-<tr>
-    <td><p style=" width:200px; height:40px; background:#8c222c; margin:0 auto; text-align:center; line-height:40px; color:#FFF"><a href="#" style=" color:#FFF; font-size:16px;">上一页</a></p></td>
-</tr>
-<br>
-<tr>
-    <td><p style=" width:200px; height:40px; background:#8c222c; margin:0 auto; text-align:center; line-height:40px; color:#FFF"><a href="#" style=" color:#FFF; font-size:16px;">下一页</a></p></td>
-</tr>
-<br>
-<tr>
-    <td><p style=" width:200px; height:40px; background:#8c222c; margin:0 auto; text-align:center; line-height:40px; color:#FFF"><a href="#" style=" color:#FFF; font-size:16px;">提交</a></p></td>
-</tr>
+    </div>
+    <div class="clearit"></div>
+</div>
+
+<div class="dao">
+    <ul>
+        <li><a href="index.html">返回首页</a></li>
+        <li><a href="xitong.html">图书信息</a></li>
+        <li><a href="kehu.html">客户信息</a></li>
+        <li><a href="dingdan.html">订单信息</a></li>
+    </ul>
+</div>
+
+
+<div class="nav">
+    <div class="da">
+
+        <div class="ban"><img src="images/ban.jpg" width="1000" height="327"/></div>
+        <div class="hao">
+            <h2>管理客户信息</h2>
+            <br>
+
+            <table border="2" align="center" cellpadding="20px" cellspacing="1" style="width:1000px; height:300px; ">
+                <thead>
+                <tr>
+                    <th height="50px" width="80px" align="center">订单编号</th>
+                    <th height="50px" width="80px" align="center">昵称</th>
+                    <th height="50px" width="80px" align="center">姓名</th>
+                    <th height="50px" width="80px" align="center">地址</th>
+                    <th height="50px" width="80px" align="center">订单</th>
+                    <th height="50px" width="80px" align="center">实付</th>
+                    <th height="50px" width="80px" align="center">修改</th>
+                </tr>
+                </thead>
+                <tr>
+                    <th height="50px" width="80px" align="center">230-540291
+                    </td>
+                    <th height="50px" width="80px" align="center">阿离
+                    </td>
+                    <th height="50px" width="80px" align="center">薛悦雅
+                    </td>
+                    <th height="50px" width="80px" align="center">河北省
+                    </td>
+                    <th height="50px" width="80px" align="center">孤独社会 *1
+                    </td>
+                    <th height="50px" width="80px" align="center">59.80
+                    </td>
+                    <td>
+                        <p style=" height:30px; width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF">
+                            <a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
+                    </td>
+                </tr>
+                <tr>
+                    <th height="50px" width="80px" align="center">230-540292
+                    </td>
+                    <th height="50px" width="80px" align="center">YoFu蓝胖子
+                    </td>
+                    <th height="50px" width="80px" align="center">李知清
+                    </td>
+                    <th height="50px" width="80px" align="center">北京市
+                    </td>
+                    <th height="50px" width="80px" align="center">汉代的谣言 *1;两种孤独 *1
+                    </td>
+                    <th height="50px" width="80px" align="center">145.00
+                    </td>
+                    </td>
+                    <td>
+                        <p style=" height:30px; width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF">
+                            <a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
+                    </td>
+                </tr>
+                <tr>
+                    <th height="50px" width="80px" align="center">230-540293
+                    </td>
+                    <th height="50px" width="80px" align="center">爱吃行天下
+                    </td>
+                    <th height="50px" width="80px" align="center">王天真
+                    </td>
+                    <th height="50px" width="80px" align="center">上海市
+                    </td>
+                    <th height="50px" width="80px" align="center">伊万·伊利奇之死 *1
+                    </td>
+                    <th height="50px" width="80px" align="center">39.8
+                    </td>
+                    <td>
+                        <p style=" height:30px; width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF">
+                            <a href="#" style=" color:#FFF; font-size:13px;">修改</a></p>
+                    </td>
+                </tr>
+            </table>
+
+        </div>
+        <br>
+        <tr>
+            <td>
+                <p style=" width:200px; height:40px; background:#8c222c; margin:0 auto; text-align:center; line-height:40px; color:#FFF">
+                    <a href="#" style=" color:#FFF; font-size:16px;">上一页</a></p></td>
+        </tr>
+        <br>
+        <tr>
+            <td>
+                <p style=" width:200px; height:40px; background:#8c222c; margin:0 auto; text-align:center; line-height:40px; color:#FFF">
+                    <a href="#" style=" color:#FFF; font-size:16px;">下一页</a></p></td>
+        </tr>
+        <br>
+        <tr>
+            <td>
+                <p style=" width:200px; height:40px; background:#8c222c; margin:0 auto; text-align:center; line-height:40px; color:#FFF">
+                    <a href="#" style=" color:#FFF; font-size:16px;">提交</a></p></td>
+        </tr>
         <div class="foot">电子书店</div>
     </div>
+</div>
 </body>
 
 </html>
