--- a/src/main/resources/static/dingdan.html
+++ b/src/main/resources/static/dingdan.html
@@ -66,7 +66,6 @@
     </div>
 </div>
 <div class="clearit"></div>
-</div>
 
 <div class="dao">
     <ul>
@@ -110,7 +109,7 @@
                 </thead>
                 <tr>
                     <th height="50px" width="150px" align="center">230-540291
-                    </td>
+                    </th>
                     <th height="50px" width="200px" align="center">赵大</th>
                     <th height="50px" width="200px" align="center">15092220323</th>
                     <th height="60px" width="200px" align="center">北京市崇文区天坛南里西区20楼3单元101</th>
@@ -140,8 +139,7 @@
 
                 </tr>
                 <tr>
-                    <th height="50px" width="150px" align="center">230-540292
-                    </td>
+                    <th height="50px" width="150px" align="center">230-540292</th>
                     <th height="50px" width="200px" align="center">钱二</th>
                     <th height="50px" width="200px" align="center">15092220323</th>
                     <th height="60px" width="200px" align="center">江苏省扬州市宝应县泰山东村102栋204室</th>
@@ -152,7 +150,7 @@
                     <th height="50px" width="200px" align="center">60.00</th>
                     <th height="50px" width="200px" align="center">已经送达</th>
                     <th height="50px" width="200px" align="center">2023/6/6 08:56</th>
-                    </td>
+
                     <td>
                         <p style=" height:30px; width:50px; background:	#4B0082; margin:0 auto; text-align:center; line-height:31px; color:#FFF">
                             <a href="#" style=" color:#FFF; font-size:13px;">确认</a></p>
@@ -172,8 +170,7 @@
 
                 </tr>
                 <tr>
-                    <th height="50px" width="150px" align="center">230-540293
-                    </td>
+                    <th height="50px" width="150px" align="center">230-540293</th>
                     <th height="50px" width="80px" align="center">孙三</th>
                     <th height="50px" width="80px" align="center">15092220323</th>
                     <th height="60px" width="80px" align="center">河南省南阳市中州路42号</th>
