--- a/src/main/resources/static/userself.html
+++ b/src/main/resources/static/userself.html
@@ -26,21 +26,35 @@
                 <el-dropdown>
                     <i class="el-icon-more-outline" style="margin-right: 15px"></i>
                     <el-dropdown-menu v-slot="dropdown">
-                        <el-dropdown-item><i class="el-icon-user-solid"></i><a href="userself.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">个人中心</a></el-dropdown-item>
-                        <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="vuehtml/shoppingcart.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的购物车</a></el-dropdown-item>
-                        <el-dropdown-item><i class="el-icon-shopping-bag-2"></i><a href="vuehtml/myorder.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">我的订单</a></el-dropdown-item>
-                        <el-dropdown-item><i class="el-icon-switch-button"></i><a href="login.html" onclick="topggleForm();" style="text-decoration: none;color:#808080">退出登录</a></el-dropdown-item>
+                        <el-dropdown-item><i class="el-icon-user-solid"></i><a href="userself.html"
+                                                                               onclick="topggleForm();"
+                                                                               style="text-decoration: none;color:#808080">个人中心</a>
+                        </el-dropdown-item>
+                        <el-dropdown-item><i class="el-icon-shopping-cart-2"></i><a href="vuehtml/shoppingcart.html"
+                                                                                    onclick="topggleForm();"
+                                                                                    style="text-decoration: none;color:#808080">我的购物车</a>
+                        </el-dropdown-item>
+                        <el-dropdown-item><i class="el-icon-shopping-bag-2"></i><a href="vuehtml/myorder.html"
+                                                                                   onclick="topggleForm();"
+                                                                                   style="text-decoration: none;color:#808080">我的订单</a>
+                        </el-dropdown-item>
+                        <el-dropdown-item><i class="el-icon-switch-button"></i><a href="login.html"
+                                                                                  onclick="topggleForm();"
+                                                                                  style="text-decoration: none;color:#808080">退出登录</a>
+                        </el-dropdown-item>
                     </el-dropdown-menu>
                 </el-dropdown>
             </el-col>
 
             <span>金芒火炙蟹棒卷</span>
-            <el-avatar shape="circle" :size="45" :fit="'fill'" src="https://cube.elemecdn.com/0/88/03b0d39583f48206768a7534e55bcpng.png"></el-avatar>
+            <el-avatar shape="circle" :size="45" :fit="'fill'"
+                       src="https://cube.elemecdn.com/0/88/03b0d39583f48206768a7534e55bcpng.png"></el-avatar>
         </el-row>
     </el-header>
     <el-main>
         <el-breadcrumb separator-class="el-icon-arrow-right">
-            <el-breadcrumb-item :to="{ path: '/' }"><a href="vuehtml/oldindex.html" style="text-decoration: none;">首页</a></el-breadcrumb-item>
+            <el-breadcrumb-item :to="{ path: '/' }"><a href="vuehtml/oldindex.html"
+                                                       style="text-decoration: none;">首页</a></el-breadcrumb-item>
             <el-breadcrumb-item><i class="el-icon-user-solid"></i>个人中心</el-breadcrumb-item>
         </el-breadcrumb>
         <el-container>
@@ -64,6 +78,26 @@
                     <el-descriptions class="margin-top" title="" :column="3" :size="size" border>
                         <template slot="extra">
                             <el-button type="primary" size="small" @click="getList">修改</el-button>
+                            <el-dialog title="个人信息" :visible.sync="dialogVisible" width="30%">
+                                <el-form ref="form" :model="form" label-width="80px">
+                                    <el-form-item label="用户名">
+                                        <el-input v-model="form.name"></el-input>
+                                    </el-form-item>
+                                    <el-form-item label="手机号">
+                                        <el-input v-model="form.number"></el-input>
+                                    </el-form-item>
+                                    <el-form-item label="居住地">
+                                        <el-input v-model="form.address"></el-input>
+                                    </el-form-item>
+                                    <el-form-item label="邮箱">
+                                        <el-input v-model="form.email"></el-input>
+                                    </el-form-item>
+                                </el-form>
+                                <span slot="footer" class="dialog-footer">
+                                    <el-button type="primary" @click="dialogVisible = false">确 定 修 改</el-button>
+                                    <el-button @click="dialogVisible = false">取 消</el-button>
+                                 </span>
+                            </el-dialog>
                         </template>
                         <el-descriptions-item>
                             <template slot="label">
@@ -129,6 +163,13 @@
         el: '#app',
         data() {
             return {
+
+                dialogVisible: false,
+                form: {
+                    name: '',
+                    number:''
+                },
+
                 squareUrl: "https://imgsa.baidu.com/forum/pic/item/a260fd246b600c33d091fa30144c510fd8f9a165.jpg",
                 value: new Date(),
                 textarea: '',
@@ -143,25 +184,50 @@
                 container.classList.toggle('active');
             },
             getList() {
-                console.log(1111)
+                this.dialogVisible = true,
+                $.ajax({
+                    url: "/users/" + this.name,
+                    //this.name为cookie的内容
+                    type: "post",
+                    // data表示发送的数据
+                    data: JSON.stringify({
+                        userName: this.user.name,
+                        userPassword: this.user.password
+                    }),
+                    // 定义发送请求的数据格式为JSON字符串
+                    contentType: "application/json;charset=UTF-8",
+                    //定义回调响应的数据格式为JSON字符串,该属性可以省略
+                    dataType: "json",
+                    //成功响应的结果
+                    success: function (data) {
+                        console.log(data);
+                        if (data.code !== 0) {
+                            document.cookie = "userData=data.data";
+                            console.log(document.cookie);
+                            location.href = "index.html";
+                        } else {
+                            alert("用户名或密码错误")
+                        }
+                    }
+                })
             }
         }
-
     })
-
-
 
 
 </script>
 
 <style>
     @import url("//unpkg.com/element-ui@2.15.14/lib/theme-chalk/index.css");
-    body{
-        background-size:cover;
+
+    body {
+        background-size: cover;
     }
+
     .app {
         background-color: #99a9bf;
     }
+
     .el-header {
         background-color: #8c222c;
         color: #B3C0D1;
