--- a/src/main/resources/static/userself.html
+++ b/src/main/resources/static/userself.html
@@ -7,15 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>网上书店系统/我的主页</title>
     <link rel="shortcut icon" href="img/mihuyo.ico">
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- 引入样式 -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <!-- 引入组件库 -->
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="//unpkg.com/vue@2/dist/vue.js"></script>
+    <script src="//unpkg.com/element-ui@2.15.14/lib/index.js"></script>
 </head>
-<script src="//unpkg.com/vue@2/dist/vue.js"></script>
-<script src="//unpkg.com/element-ui@2.15.14/lib/index.js"></script>
 <body>
 
 <div id="app">
@@ -184,7 +184,9 @@
                 container.classList.toggle('active');
             },
             getList() {
-                this.dialogVisible = true,
+                const author = JSON.parse(localStorage.getItem('jwtToken'))
+                console.log(author)
+                this.dialogVisible = true
                 $.ajax({
                     url: "/users/" + this.name,
                     //this.name为cookie的内容
