--- a/src/main/resources/static/userself.html
+++ b/src/main/resources/static/userself.html
@@ -84,7 +84,7 @@
                                         <el-input v-model="form.name"></el-input>
                                     </el-form-item>
                                     <el-form-item label="手机号">
-                                        <el-input v-model="form.number"></el-input>
+                                        <el-input v-model="form.tel"></el-input>
                                     </el-form-item>
                                     <el-form-item label="居住地">
                                         <el-input v-model="form.address"></el-input>
@@ -94,7 +94,7 @@
                                     </el-form-item>
                                 </el-form>
                                 <span slot="footer" class="dialog-footer">
-                                    <el-button type="primary" @click="dialogVisible = false">确 定 修 改</el-button>
+                                    <el-button type="primary" @click="update">确 定 修 改</el-button>
                                     <el-button @click="dialogVisible = false">取 消</el-button>
                                  </span>
                             </el-dialog>
@@ -167,7 +167,9 @@
                 dialogVisible: false,
                 form: {
                     name: '',
-                    number:''
+                    tel:'',
+                    address: '',
+                    email: ''
                 },
 
                 squareUrl: "https://imgsa.baidu.com/forum/pic/item/a260fd246b600c33d091fa30144c510fd8f9a165.jpg",
@@ -184,18 +186,27 @@
                 container.classList.toggle('active');
             },
             getList() {
-                const author = JSON.parse(localStorage.getItem('jwtToken'))
-                console.log(author)
                 this.dialogVisible = true
+                const user = sessionStorage.getItem('user');
+                var cur = JSON.parse(user);
+                this.form.name = cur.userName
+                this.form.tel = cur.tel
+                this.form.address = cur.address
+                this.form.email = cur.email
+                // const author = JSON.parse(localStorage.getItem('jwtToken'))
+                // console.log(author)
+            },
+            update() {
+                this.dialogVisible = false
                 $.ajax({
-                    url: "/users/" + this.name,
+                    url: "/users",
                     //this.name为cookie的内容
-                    type: "post",
+                    type: "put",
+                    headers: {
+                        Authorization: localStorage.getItem('token')
+                    },
                     // data表示发送的数据
-                    data: JSON.stringify({
-                        userName: this.user.name,
-                        userPassword: this.user.password
-                    }),
+                    data: JSON.stringify({cur}),
                     // 定义发送请求的数据格式为JSON字符串
                     contentType: "application/json;charset=UTF-8",
                     //定义回调响应的数据格式为JSON字符串,该属性可以省略
@@ -213,6 +224,7 @@
                     }
                 })
             }
+
         }
     })
 
